// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within tagsSelectors the selectors match their snapshots for the includedSourceTagsSelector 1`] = `
[
  {
    "entryCount": 0,
    "id": "4006",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-f",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "4007",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-g",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "4008",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-h",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "4009",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-i",
    "workspaceId": "1001",
  },
]
`;

exports[`within tagsSelectors the selectors match their snapshots for the sourceTagsForTransferSelector 1`] = `
[
  {
    "entryCount": 0,
    "id": "4006",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-f",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "4007",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-g",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "4008",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-h",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "id": "4009",
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-i",
    "workspaceId": "1001",
  },
]
`;

exports[`within tagsSelectors the selectors match their snapshots for the tagsTotalCountsByTypeSelector 1`] = `
{
  "entryCount": 3,
  "existsInTarget": 3,
  "isIncluded": 4,
}
`;

exports[`within tagsSelectors the tagIdsByNameSelectorFactory matches its snapshot 1`] = `
{
  "tag-a": "4001",
  "tag-b": "4002",
  "tag-c": "4003",
  "tag-d": "4004",
  "tag-e": "4005",
  "tag-f": "4006",
  "tag-g": "4007",
  "tag-h": "4008",
  "tag-i": "4009",
}
`;

exports[`within tagsSelectors the tagsForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = false 1`] = `
[
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4004",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": false,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-d",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4005",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": false,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-e",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4006",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-f",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4007",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-g",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4008",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-h",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4009",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-i",
    "workspaceId": "1001",
  },
]
`;

exports[`within tagsSelectors the tagsForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = true 1`] = `
[
  {
    "entryCount": 1,
    "existsInTarget": true,
    "id": "4001",
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isIncluded": false,
    "linkedId": "clock-tag-01",
    "memberOf": "tags",
    "name": "tag-a",
    "workspaceId": "1001",
  },
  {
    "entryCount": 1,
    "existsInTarget": true,
    "id": "4002",
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isIncluded": false,
    "linkedId": "clock-tag-02",
    "memberOf": "tags",
    "name": "tag-b",
    "workspaceId": "1001",
  },
  {
    "entryCount": 1,
    "existsInTarget": true,
    "id": "4003",
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isIncluded": false,
    "linkedId": "clock-tag-03",
    "memberOf": "tags",
    "name": "tag-c",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4004",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": false,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-d",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4005",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": false,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-e",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4006",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-f",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4007",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-g",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4008",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-h",
    "workspaceId": "1001",
  },
  {
    "entryCount": 0,
    "existsInTarget": false,
    "id": "4009",
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tags",
    "name": "tag-i",
    "workspaceId": "1001",
  },
]
`;

exports[`within tagsSelectors the targetTagIdsSelectorFactory matches its snapshot 1`] = `
[
  "clock-tag-01",
  "clock-tag-02",
  "clock-tag-03",
]
`;
